# poc-rust-actix

./: .gitignore  BUILDING.md  Cargo.toml  README.md  openapi3.yaml
docs/: Coord.md  DataCell.md  DataTable.md  DefaultApi.md  Error.md  ErrorCell.md  ErrorTable.md  TableUpdateRequest.md  TableUpdateResponse.md
src/: lib.rs  main.rs
src/apis/: table.rs
src/models/: coord.rs  data_cell.rs  data_table.rs  error.rs  error_cell.rs  error_table.rs  mod.rs  table_update_request.rs  table_update_response.rs
tests/: tables.rs
